[package]
name = "loopring_sign"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "This crate generates an eddsa signature for loopring"
repository = "https://github.com/tainnhan/loopring_sign"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.4"
lazy_static = "1.4.0"
blake2b_simd = "1.0.2"
num-traits = "0.2.17"
url = "2.4.1"
serde_json = "1.0.107"
percent-encoding = "2.3.0"
indexmap = { version = "2.0.2", features = ['serde'] }
sha2 = "0.10.8"
hex = "0.4.3"
